{
  "version": 4,
  "terraform_version": "0.15.4",
  "serial": 473,
  "lineage": "17d42b56-6ea0-ca6f-1292-70c99f478f58",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:internet-gateway/igw-0aa53c388d6aebd7d",
            "id": "igw-0aa53c388d6aebd7d",
            "owner_id": "115553109071",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            },
            "vpc_id": "vpc-0cfd1f70c635b117f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:115553109071:loadbalancer/app/tf-lb-20210620070410161400000001/6d2e738a6782cf40",
            "arn_suffix": "app/tf-lb-20210620070410161400000001/6d2e738a6782cf40",
            "dns_name": "tf-lb-20210620070410161400000001-1306597661.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:115553109071:loadbalancer/app/tf-lb-20210620070410161400000001/6d2e738a6782cf40",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20210620070410161400000001",
            "security_groups": [
              "sg-0f9551de3f22024ae"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a68bcd3dc172fd6f"
              },
              {
                "subnet_id": "subnet-0ba2c81d39b75e2a3"
              }
            ],
            "subnets": [
              "subnet-0a68bcd3dc172fd6f",
              "subnet-0ba2c81d39b75e2a3"
            ],
            "vpc_id": "vpc-0cfd1f70c635b117f",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.nondefault_1",
            "aws_subnet.nondefault_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "mrw-lb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:115553109071:listener/app/tf-lb-20210620070410161400000001/6d2e738a6782cf40/f2181a843202a583",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:115553109071:listener/app/tf-lb-20210620070410161400000001/6d2e738a6782cf40/f2181a843202a583",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:115553109071:loadbalancer/app/tf-lb-20210620070410161400000001/6d2e738a6782cf40",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_test",
            "aws_subnet.nondefault_1",
            "aws_subnet.nondefault_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:route-table/rtb-0d443f8c77a8af93b",
            "id": "rtb-0d443f8c77a8af93b",
            "owner_id": "115553109071",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aa53c388d6aebd7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rtb"
            },
            "tags_all": {
              "Name": "public-rtb"
            },
            "vpc_id": "vpc-0cfd1f70c635b117f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rtb-assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec54de53591a262e",
            "route_table_id": "rtb-0d443f8c77a8af93b",
            "subnet_id": "subnet-0ba2c81d39b75e2a3"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rtb",
            "aws_subnet.nondefault_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rtb-assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0045e99b2d5ec4e0b",
            "route_table_id": "rtb-0d443f8c77a8af93b",
            "subnet_id": "subnet-0a68bcd3dc172fd6f"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public-rtb",
            "aws_subnet.nondefault_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:security-group/sg-036937308f79cd344",
            "description": "Allow all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036937308f79cd344",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "Allow access Security Group",
            "name_prefix": "",
            "owner_id": "115553109071",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cfd1f70c635b117f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "unused",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:security-group/sg-0239d1518e5829077",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0239d1518e5829077",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              }
            ],
            "name": "Unused security group",
            "name_prefix": "",
            "owner_id": "115553109071",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cfd1f70c635b117f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nondefault_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-0ba2c81d39b75e2a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.128/25",
            "id": "subnet-0ba2c81d39b75e2a3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115553109071",
            "vpc_id": "vpc-0cfd1f70c635b117f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nondefault_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:subnet/subnet-0a68bcd3dc172fd6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/25",
            "id": "subnet-0a68bcd3dc172fd6f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "115553109071",
            "vpc_id": "vpc-0cfd1f70c635b117f"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:115553109071:vpc/vpc-0cfd1f70c635b117f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.1.0/24",
            "default_network_acl_id": "acl-0614e8c79c7540888",
            "default_route_table_id": "rtb-0a9a6ab7741ae1b6b",
            "default_security_group_id": "sg-0f9551de3f22024ae",
            "dhcp_options_id": "dopt-3045214a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0cfd1f70c635b117f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a9a6ab7741ae1b6b",
            "owner_id": "115553109071"
          }
        }
      ]
    }
  ]
}